fix blog spacing issue

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_blog.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_blog.scss
@@ -20,7 +20,7 @@
     }
     .page-header {
         padding-left: 13px;
-        padding-bottom: 54px;
+        padding-bottom: 15px;
         @include clearfix;
         h1 {
             color: $Blue;
